# api/router.go
@@ -45,6 +45,7 @@ func (h *Handler) SetupRoutes(router *mux.Router) {
 	superadmin.HandleFunc("/users/{id}", h.deleteUser).Methods("DELETE", "OPTIONS")
 	superadmin.HandleFunc("/users/{id}", h.updateUserVerified).Methods("PUT")
 	superadmin.HandleFunc("/markets/{id}", h.updateMarket).Methods("PUT", "OPTIONS")
+	superadmin.HandleFunc("/superadmin-update", h.updateSuperadmin).Methods("PUT", "OPTIONS")
 
 	// Market admin routes
 	marketAdmin := router.PathPrefix("/api/market").Subrouter()
@@ -58,10 +59,10 @@ func (h *Handler) SetupRoutes(router *mux.Router) {
 	marketAdmin.HandleFunc("/thumbnails/{thumbnail_id}", h.deleteThumbnail).Methods("DELETE", "OPTIONS")
 	marketAdmin.HandleFunc("/markets/{id}/thumbnail", h.uploadMarketThumbnail).Methods("POST", "OPTIONS")
 	marketAdmin.HandleFunc("/orders", h.getMarketAdminOrders).Methods("GET", "OPTIONS")
-	marketAdmin.HandleFunc("/orders/{order_id}", h.getMarketAdminOrderByID).Methods("GET", "OPTIONS")
+	marketAdmin.HandleFunc("/orders/{cart_order_id}/{user_id}", h.getMarketAdminOrderByID).Methods("GET", "OPTIONS")
 	marketAdmin.HandleFunc("/profile", h.getMarketProfile).Methods("GET", "OPTIONS")
 	marketAdmin.HandleFunc("/profile", h.updateMarketProfile).Methods("PUT", "OPTIONS")
-	marketAdmin.HandleFunc("/orders/{order_id}", h.updateOrderStatus).Methods("PUT", "OPTIONS")
+	marketAdmin.HandleFunc("/orders/{cart_order_id}/{user_id}", h.updateOrderStatus).Methods("PUT", "OPTIONS")
 	marketAdmin.HandleFunc("/sizes/{size_id}", h.updateSize).Methods("PUT", "OPTIONS")
 	marketAdmin.HandleFunc("/thumbnails/{thumbnail_id}", h.updateThumbnail).Methods("PUT","OPITONS")
 	marketAdmin.HandleFunc("/markets", h.getMarketByID).Methods("GET", "OPTIONS")
@@ -98,9 +99,11 @@ func (h *Handler) SetupRoutes(router *mux.Router) {
 	router.HandleFunc("/market/login", h.loginMarket).Methods("POST", "OPTIONS")
 	router.HandleFunc("/superadmin/login", h.loginSuperadmin).Methods("POST", "OPTIONS")
 	router.HandleFunc("/markets", h.getMarkets).Methods("GET", "OPTIONS")
-	router.HandleFunc("/markets/{id}/products", h.getMarketProducts).Methods("GET", "OPTIONS")
-	router.HandleFunc("/products", h.getAllProducts).Methods("GET", "OPTIONS")
+	//router.HandleFunc("/markets/{id}/products", h.getMarketProducts).Methods("GET", "OPTIONS")
+	userProtected.HandleFunc("/products", h.getAllProducts).Methods("GET", "OPTIONS")
+	router.HandleFunc("/products", h.getAllProductsNonAuthenticated).Methods("GET", "OPTIONS")
 	router.HandleFunc("/products/{id}", h.getProduct).Methods("GET", "OPTIONS")
+	userProtected.HandleFunc("/products/{id}", h.getProductNonAuthenticated).Methods("GET", "OPTIONS")
 	router.HandleFunc("/thumbnails", h.getAllThumbnails).Methods("GET", "OPTIONS")
 	router.HandleFunc("/categories", h.getCategories).Methods("GET", "OPTIONS")
 	router.HandleFunc("/banners", h.getBanners).Methods("GET", "OPTIONS")
